--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -44,4 +44,21 @@
 
     margin: 0 1rem;
     cursor: pointer;
+
+}
+.gpt3__navbar-sign button,
+.gpt3__navbar-menu_container button {
+    padding: 0.5rem 1rem;
+    color: #fff;
+    font-family: var(--font-family);
+    font-size: 18px;
+    line-height: 25px;
+    left: 1153px;
+    top: 55px;
+    background: #FF4820;
+    border-radius: 5px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+
 }
